--- a/src/AuthService/Dockerfile
+++ b/src/AuthService/Dockerfile
@@ -8,6 +8,9 @@ RUN npm install --production
 
 COPY . .
 
+LABEL service="auth-service" \
+      description="Authentication and user management service for URL Shortener"
+
 EXPOSE 3000
 
 CMD [ "node", "server.js" ] 
