--- a/src/AuthService/package.json
+++ b/src/AuthService/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "identity-service",
+  "name": "auth-service",
   "version": "1.0.0",
-  "description": "Identity and authentication service for URL Shortener",
+  "description": "Authentication and user management service for URL Shortener",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -18,8 +18,11 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
+    "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "winston": "^3.11.0"
   },
   "devDependencies": {
