Enhance Redirect Service with improved Dockerfile, environment configuration, and service functionality
- Updated Dockerfile to include service metadata and create logs directory.
- Modified package.json to add new test scripts and update service description.
- Expanded ENV_README.md to include additional environment variables for RabbitMQ, CORS, rate limiting, and security features.
- Refactored server.js to implement structured logging, improved error handling, and metrics tracking.
- Enhanced URL model with additional fields for visitor tracking and metadata.
- Updated health check routes to provide detailed service status and dependency checks.
- Implemented caching strategies in cacheService for better performance and reliability.
- Improved message handling in messageHandler for RabbitMQ connections and event publishing.

--- a/src/RedirectService/Dockerfile
+++ b/src/RedirectService/Dockerfile
@@ -1,13 +1,25 @@
 FROM node:18-alpine
 
+LABEL service="redirect-service" \
+      description="URL redirection service with Redis caching for URL Shortener"
+
+# Create app directory
 WORKDIR /usr/src/app
 
+# Install app dependencies
+# A wildcard is used to ensure both package.json AND package-lock.json are copied
 COPY package*.json ./
 
-RUN npm install --production
+RUN npm ci --only=production
 
+# Bundle app source
 COPY . .
 
+# Create logs directory
+RUN mkdir -p logs
+
+# Expose port
 EXPOSE 3000
 
+# Start the service
 CMD [ "node", "server.js" ] 
