--- a/src/RedirectService/Dockerfile
+++ b/src/RedirectService/Dockerfile
@@ -10,7 +10,7 @@ WORKDIR /usr/src/app
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 COPY package*.json ./
 
-RUN npm ci --only=production
+RUN npm install --omit=dev
 
 # Bundle app source
 COPY . .
