--- a/src/UrlShortenerService/UrlShortenerService/Dockerfile
+++ b/src/UrlShortenerService/UrlShortenerService/Dockerfile
@@ -1,7 +1,7 @@
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+ENV ASPNETCORE_URLS=http://+:${PORT}
+EXPOSE ${PORT}
 WORKDIR /app
-EXPOSE 80
-EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
