--- a/src/RedirectService/package.json
+++ b/src/RedirectService/package.json
@@ -18,6 +18,7 @@
     "express-rate-limit": "^7.1.4",
     "helmet": "^7.1.0",
     "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
     "morgan": "^1.10.0",
     "swagger-jsdoc": "^6.2.8",
