--- a/src/UrlShortenerService/UrlShortenerService/appsettings.json
+++ b/src/UrlShortenerService/UrlShortenerService/appsettings.json
@@ -5,7 +5,7 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "AllowedHosts": "https://url-shortener-dun-eight.vercel.app/",
+    "AllowedHosts": "*",
     "RabbitMQ": {
         "ConnectionString": "amqps://irnrcdfe:i8Sii2DlRiD1u2fobfw_gIuEuQa-z-4f@chimpanzee.rmq.cloudamqp.com/irnrcdfe",
         "Exchange": "url-shortener-events",
