--- a/src/UrlShortenerService/UrlShortenerService/appsettings.Development.json
+++ b/src/UrlShortenerService/UrlShortenerService/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "RedirectService": {
+    "BaseUrl": "http://localhost:5003"
+  },
+  "BaseUrl": "http://localhost:5002"
 }
