--- a/src/UrlShortenerService/UrlShortenerService/appsettings.json
+++ b/src/UrlShortenerService/UrlShortenerService/appsettings.json
@@ -5,6 +5,9 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
+    "RedirectService": {
+      "BaseUrl": "http://localhost:5003"
+    },
     "AllowedHosts": "*",
     "RabbitMQ": {
         "ConnectionString": "amqps://irnrcdfe:i8Sii2DlRiD1u2fobfw_gIuEuQa-z-4f@chimpanzee.rmq.cloudamqp.com/irnrcdfe",
