Update RedirectService base URL in appsettings.json to use the production endpoint

--- a/src/UrlShortenerService/UrlShortenerService/appsettings.json
+++ b/src/UrlShortenerService/UrlShortenerService/appsettings.json
@@ -6,7 +6,7 @@
         }
     },
     "RedirectService": {
-      "BaseUrl": "http://localhost:5003"
+      "BaseUrl": "https://redirectservice-ayfr.onrender.com"
     },
     "AllowedHosts": "*",
     "RabbitMQ": {
